<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rowLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black">

            <TextView
                android:id="@+id/tv_flavor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="55dp"
                android:layout_marginTop="24dp"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/im_item"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/im_item"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:contentDescription="@string/todo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tv_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/tv_flavor"
                app:layout_constraintTop_toBottomOf="@+id/tv_flavor" />

            <Button
                android:id="@+id/btn_add"
                android:layout_width="47dp"
                android:layout_height="43dp"
                android:layout_marginStart="32dp"
                android:layout_marginBottom="32dp"
                android:text="@string/addSign"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_price"
                app:layout_constraintTop_toTopOf="@+id/tv_price"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:id="@+id/btn_delete"
                android:layout_width="47dp"
                android:layout_height="43dp"
                android:layout_marginStart="60dp"
                android:layout_marginBottom="32dp"
                android:text="@string/minusSign"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_price"
                app:layout_constraintTop_toTopOf="@+id/tv_price"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/tv_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:layout_marginEnd="166dp"
                android:layout_marginBottom="13dp"
                android:text="@string/quantity"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/im_item"
                app:layout_constraintTop_toBottomOf="@+id/btn_add" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>